feat: 适配客户端